content/docs/core/1.2.0/reference/vendr-web-controllers/storecontroller.md
---
title: StoreController
description: API reference for StoreController in Vendr, the eCommerce solution for Umbraco v8+
---
## StoreController

```csharp
public class StoreController : VendrAuthorizedJsonControllerBase
```

**Inheritance**

* class [VendrAuthorizedJsonControllerBase](../vendrauthorizedjsoncontrollerbase/)

**Namespace**
* [Vendr.Web.Controllers](../)

### Constructors

#### StoreController

```csharp
public StoreController(UmbracoControllerContext vendrContext, IStoreService storeService, 
    IUnitOfWorkProvider uowProvider, IIOHelper ioHelper)
```


### Methods

#### CreateStore

```csharp
public StoreEditDto CreateStore()
```


---

#### DeleteStore

```csharp
public HttpResponseMessage DeleteStore(Guid storeId)
```


---

#### GetBasicStore

```csharp
public StoreBasicDto GetBasicStore(Guid storeId)
```


---

#### GetBasicStoreByNodeId

```csharp
public StoreBasicDto GetBasicStoreByNodeId(int nodeId)
```


---

#### GetStore

```csharp
public StoreEditDto GetStore(Guid storeId)
```


---

#### GetStoreAlias

```csharp
public string GetStoreAlias(Guid storeId)
```


---

#### GetStoreOrderEditorConfig

```csharp
public object GetStoreOrderEditorConfig(Guid storeId)
```


---

#### GetStores

```csharp
public IEnumerable<StoreBasicDto> GetStores()
```


---

#### SaveStore

```csharp
public StoreEditDto SaveStore(StoreSaveDto store)
```


<!-- DO NOT EDIT: generated by xmldocmd for Vendr.Web.dll -->
